--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-yt-dlp==2024.10.22
+yt-dlp
 fastapi==0.114.2
 opencv-python==4.10.0.84
-uvicorn==0.30.6
-ipykernel==6.29.5
-ipywidgets==8.1.5
+uvicorn
+ipykernel
+ipywidgets
 matplotlib
 tqdm
 pytesseract
 pandas
+google-cloud-storage
