--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,8 @@
 {
     "python.defaultInterpreterPath": "/user/local/bin/python",
     "python.terminal.activateEnvironment": true,
+    "editor.formatOnSave": true,
+    "[typescriptreact]": {
+        "editor.tabSize": 2
+    }
 }
